# cortex-arena

./: .env.example  .gitignore  README.md  pyproject.toml
backend/: __init__.py
backend/app/: __init__.py  agents.py  arena.py  branding.py  cli.py  config.py  judge.py  main.py  models.py  setup.py  storage.py
backend/app/agentic/: __init__.py  goals.py  utility.py
backend/app/providers/: __init__.py  base.py  huggingface.py  nvidia.py  ollama.py  registry.py
backend/app/reinforcement/: __init__.py  q_learning.py
docs/: GETTING_STARTED.md  benchmark_results.json  verification_results.json
examples/challenges/: mixed_challenges.json
frontend/: streamlit_app.py
scripts/: run_model_benchmark.py  verify_live_behavior.py
tests/: test_agentic_engines.py
